--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,44 @@ services:
     volumes:
       - ./app:/app
     command: >
-      sh -C "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db && \
+             python manage.py migrate && \
+             python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=app
+      - DB_USER=postgres
+      - DB_PASS=supersecretpassword
+    depends_on:
+      - db
+  db:
+    image: postgres:12-alpine
+    environment:
+      - POSTGRES_DB=app
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=supersecretpassword
+#  db:
+#    image: mongo:3.4.4
+#    command: mongodb --storageEngine wiredTiger
+#    ports:
+#      - '27017:27017'
+#    environment:
+#      - MONGO_SERVER=db
+#      - MONGO_INITDB_DATABASE=app
+  #    - MONGO_INITDB_ROOT_USERNAME=root
+  #    - MONGO_INITDB_ROOT_PASSWORD=root
+
+#  my-dbmongoclient:
+#    # build will get tagged with 'image'
+#    build: ./my-mongoclient
+#    image: fabianlee/my-mongoclient:3.9
+#    container_name: my-mongoclient
+#    environment:
+#      - MONGO_SERVER=db
+#      - MONGO_INITDB_DATABASE=app
+#      - MONGO_INITDB_ROOT_USERNAME=root
+#      - MONGO_INITDB_ROOT_PASSWORD=root
+#    networks:
+#      - mongo_net
+#    depends_on:
+#      - db
