--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-Django>=2.1.3,<2.2.0
-djangorestframework>=3.2.0,<3.10.0
+Django>=2.2.0,<2.2.3
+djangorestframework>=3.9.0,<3.10.0
+#sqlparse==0.2.4
+psycopg2>=2.7.5,<2.8.0
+#mongoengine>0.15.0,<0.16.0
 
+#djongo>=1.2.8,<1.2.9
 flake8<=3.6.0,<3.7.0
+
+#pymongo>=3.10.1,<3.11.0
